# multi-robotics-research

./: README.md
photobooth-pi/: photobooth_main.py  tumblr_upload_test.py
romi-simulations/catkin_ws/devel/: _setup_util.py  setup.sh
romi-simulations/catkin_ws/src/robot_description/: CMakeLists.txt  package.xml
romi-simulations/catkin_ws/src/robot_description/launch/: romi-camera-hat.launch  romi-urdf.launch
romi-simulations/catkin_ws/src/romi_gazebo/: CMakeLists.txt  package.xml
romi-simulations/catkin_ws/src/romi_nav/: CMakeLists.txt  package.xml
romi-simulations/catkin_ws/src/romi_teleop/: CMakeLists.txt  package.xml  setup.py
romi-simulations/catkin_ws/src/romi_teleop/launch/: romi_leader_teleop_key .launch  romi_teleop_key.launch
romi-simulations/catkin_ws/src/romi_teleop/nodes/: romi_leader_teleop_key  romi_teleop_key
romi_files /AR markers/AR Markers COLLADA/: marker-0.dae  marker-0_updated.dae
romi_files /AR markers/AR Markers blend/: marker-0.blend  marker-0.blend1
romi_files /AR markers/leader_id_23/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
romi_files /AR markers/leader_id_23/meshes/: Leader_ID_23.stl
romi_files /Romi/blend/: chassis.blend  chassis.blend1  follower-tagboard.blend  front-caster.blend  new_hat.blend  new_hat.blend1  wheel.blend  wheel.blend1
romi_files /Romi/dae/: wheel.dae
romi_files /Romi/original/: Follower_Tagboard.dae  Follower_Tagboard.stl  Leader-Dual-Tagboard.stl  front-caster.stl  wheel.stl
romi_files /Romi/updated/: chassis.stl  follower-tagboard_.stl  new_follower_hat.stl
(+253 files in other folders)
